submit practice Collection & ArrayList； and dubbo service practice service2 and application1

--- a/项目介绍.md
+++ b/项目介绍.md
@@ -18,6 +18,233 @@ windows: bin目录下运行`startup.cmd`
 
 linux: bin目录下运行`startup.sh`
 
+#### 2.1.1 注册服务
+
+引入依赖spring-cloud-starter-alibaba-nacos-discovery
+````xml
+<dependency>
+    <groupId>com.alibaba.cloud</groupId>
+    <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+</dependency>
+````
+
+在yml配置文件里填写nacos配置信息
+````yml
+provider:
+  address: 127.0.0.1:56010
+spring:
+  application:
+    name: nacos-restful-consumer
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 10.130.6.115:8848
+````
+#### 2.1.2 服务调用
+
+在controller文件里调用服务
+````java
+/**
+ * 指定服务名
+ */
+String serviceID = "nacos-restful-provider";
+
+/**
+ * 通过负载均衡发现地址，流程是从服务发现中心拿nacos-restful-provider服务的列表，通过负载均衡算法获取一个地址
+ */
+@Resource
+LoadBalancerClient loadBalancerClient;
+
+@GetMapping("/service1")
+public String service1() {
+    RestTemplate restTemplate = new RestTemplate();
+
+    // 发现一个地址
+    ServiceInstance serviceInstance = loadBalancerClient.choose(serviceID);
+
+    // 获取一个http://开头的地址， 包括ip和端口
+    URI uri = serviceInstance.getUri();
+    String result = restTemplate.getForObject(uri + "/service", String.class);
+    return "consumer invoke: " + result;
+}
+````
+
+### 2.3 负载均衡
+
+**负载均衡**就是讲用户请求（流量）通过一定的策略，分摊在多个服务实例上执行，它是系统处理高并发、缓解网络压力和进行服务端扩容的重要手段之一。它分为**服务端负载均衡**和**客户端负载均衡**。
+
+#### 2.3.1 服务器端负载均衡
+![服务器端负载均衡](./img/img.png)
+		在负载均衡器中，维护一个可用的服务实例清单，当客户端请求来临时，负载均衡服务器按照某种配置好的规则(**负载均衡算法**)从可用服务实例清单中选取其一去处理客户端的请求。这就是服务端负载均衡。
+
+> 例如Nginx， 通过Nginx进行负载均衡，客户端发送请求至Nginx，Nginx通过负载均衡算法，在多个服务器之间选择一个进行访问。即在服务器端再进行负载均衡算法分配。
+
+#### 2.3.2 客户端服务负载均衡
+
+![客户端负载均衡](./img/img_1.png)
+> 上边使用的LoadBalancerClient就是一个客户端负载均衡器，具体使用的是Ribbon客户端负载均衡器。Ribbon在发送请求前通过负载均衡算法选择一个服务实例，然后进行访问，这是客户端负载均衡。即在客户端就进行负载均衡的分配。
+
+Ribbon是一个客户端负载均衡器，它的责任是从一组实例列表中挑选合适的实例，如何挑选？取决于**负载均衡策略**。
+
+#### 2.3.3 Ribbon负载均衡策略
+
+Ribbon核心组件*IRule*是负载均衡策略接口，它有如下实现，大家仅做了解：
+
+- **RoundRobinRule（默认）**：轮询，即按一定的顺序轮换获取实例的地址。
+- **RandomRule**：随机，即以随机的方式获取实例的地址。
+- **AvailabilityFilteringRule**：会先过滤掉由于多次访问故障而处于断路器跳闸状态的服务，以及并发的连接数量超过阈值的服务，然后对剩余的服务列表按照轮询策略进行访问。
+- **WeightedResponseTimeRule**：根据平均响应时间计算所有服务的权重，响应时间越快，服务权重越大，被选中的几率越高；刚启动时，如果统计信息不足，则使用RoundRobinRule策略，等统计信息足够时，会切换到该策略。
+- **RetryRule**：先按照轮询的策略获取服务，如果获取服务失败，则在指定时间内会进行重试，获取可用的服务。
+- **BestAvailableRule**：会先过滤掉由于多次访问故障而处于断路器跳闸状态的服务，然后选择一个并发量最小的服务。
+- **ZoneAvoidanceRule**：默认规则，符合判断server所在区域的性能和server的可用性选择服务器。
+
+**启动多个相同服务实例**
+
+> 启动一个服务后，在idea上方点击实例名，下拉 -> Edit Configurations -> 弹出Run/Debug Configurations窗口 -> 选择一个Spring Boot实例 -> 右侧Configuration tab -> Environment -> VM options -> 输入“-Dserver.port=端口号” -> 右下角apply -> 在左上角加号减号右边复制当前实例 -> 更改VM options的端口号 -> apply后点击启动即可启动相同服务的不同实例
+
+#### 2.3.4 如何更换负载均衡策略
+
+在yml配置文件中，写出要调用的服务实例名，使用ribbon的负载均衡策略，把策略的全路径名配置上
+
+例如：配置随机策略
+````yml
+nacos-restful-provider:
+  ribbon:
+    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
+````
+
+### 2.4 Dubbo服务发现
+Spring Cloud Alibaba微服务框架继承了Dubbo，可实现微服务对外暴露Dubbo协议的接口，Dubbo协议相比RESTful协议速度更快。
+
+**RPC**：RPC是远程过程调用（Remote Procedure Call）的缩写形式，调用RPC远程方法就像调用本地方法一样，非常方便。
+
+#### 2.4.1 Dubbo微服务架构
+下图是微服务采用Dubbo协议的系统架构图：
+![Dubbo微服务架构](./img/img_2.png)
+
+组件说明：
+
+- 客户端：前端或外部系统
+- API网关：系统唯一入口，路由转发
+- application-1：应用1，前端提供Http接口，接收用户的交互请求
+- service-1：微服务1，提供业务逻辑处理服务
+- service-2：微服务2，提供业务逻辑处理服务
+
+交互流程：
+
+- 网关负责客户端请求的统一入口，路由转发，前端通过网关请求后端服务。
+- 网关收到前端请求，转发请求给应用。
+- 应用接收前端请求，调用微服务进行业务逻辑处理。
+- 微服务为应用提供业务逻辑处理的支撑，为应用提供Dubbo协议接口。
+
+**优势分析**
+> 此架构同事提供RESTful和Dubbo接口服务，应用层对前端提供RESTful接口，RESTful是互联网通用的轻量级交互协议，方便前端接入系统；微服务层向应用层提供Dubbo接口，Dubbo接口基于RPC通信协议速度更快。
+> 
+> 本架构采用阿里开源的Nacos，集服务发现和配置中心于一身，支持RESTful及Dubbo服务的注册。
+
+#### 2.4.2 开发服务
+##### 2.4.2.1 service-2微服务
+service2对外暴露dubbo协议的接口，考虑远程接口可能会被其它多个服务调用，这里将service2的接口单独抽取出api工程，service2微服务工程的结构如下：
+>--| nacos-dubbo-service2
+> 
+>-----| nacos-dubbo-service2.iml
+> 
+>-----| pom.xml
+> 
+>-----| service2-api
+> 
+>-----| service2-server
+
+service2-api: 存放接口，独立成一个工程方便被其它服务工程依赖。
+
+service2-server：存放接口实现，即dubbo服务的实现部分。
+
+service2-api模块编写service接口，service2-server模块编写具体实现，需要在service2-server的pom.xml引入service2-api；同时需要暴露dubbo接口，需引入dubbo依赖
+````xml
+<!-- 此pom.xml文件是service2-server模块 -->
+<dependency>
+	<groupId>com.jesse</groupId>
+	<artifactId>service2-api</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+</dependency>
+<dependency>
+	<groupId>com.alibaba.cloud</groupId>
+	<artifactId>spring-cloud-starter-dubbo</artifactId>
+</dependency>
+````
+
+引入dubbo依赖后，需要在service实现类加上dubbo的Service注解
+````java
+@org.apache.dubbo.config.annotation.Service
+public class Service2Impl implements Service2Api { ... }
+````
+在service2-server处的配置文件，文件名为**bootstrap.yml**，相比于application.yml，bootstrap.yml的优先级要更高
+````yml
+server:
+  port: 56040    # 启动端口 命令行注入
+
+provider:
+  address: 127.0.0.1:56010
+
+spring:
+  application:
+    name: dubbo-service2
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 10.130.6.115:8848
+  main:
+    allow-bean-definition-overriding: true   # Spring Boot 2.1 需要设定， 如果出现重名bean会报错，加上这个配置就不会报错
+
+dubbo:
+  scan:
+    # dubbo 服务扫描基准包 所有需要暴露出去的dubbo接口服务都需要放在这个包下
+    base-packages: com.jesse.service2Server.service
+  protocol:
+  # dubbo 协议，name为协议名称， port为协议端口， 可以指定多协议， 如：dubbo.protocol.port=1099
+    name: dubbo
+    # 协议端口
+    port: 20891
+  registry:
+    # Dubbo服务注册中心配置，说明dubbo服务注册到nacos
+    address: nacos://10.130.6.115:8848
+  application:
+    qos-enable: false  # dubbo 运维服务是否开启
+  consumer:
+    check: false    # 启动时是否检查依赖的服务
+````
+
+##### 2.4.2.2 application1调用service2
+使用nacos-restful-consumer模块作为application1服务
+
+在application1服务的pom.xml中引入service2-api的依赖，因为使用dubbo调用服务，所以还需要引入dubbo依赖
+
+````java
+/**
+ * dubbo的Reference注解将接口注入进来，生成了这个接口的客户端代理对象，
+ * 使用这个代理对象来实现远程调用服务
+ */
+@org.apache.dubbo.config.annotation.Reference
+Service2Api service2Api;
+
+@GetMapping("/service2")
+public String service2() {
+    // 远程调用dubboService2
+    String s = service2Api.dubboService2();
+    return "consumer dubbo invoke: " + s;
+}
+````
+
+##### 2.4.2.3 service1微服务
+service1采用和service2相同的工程结构
+
+service1对外暴露dubbo接口，并且实现service1调用service2
+
+
+
+
+
+
 
 
 
