nacos server discovery and config;

--- a/项目介绍.md
+++ b/项目介绍.md
@@ -2,10 +2,7 @@
 
 ## 1. 项目背景
 
-​		随着移动支付的盛行，商业银行、第三方支付公司、其它清算机构、消费金融公司等众多类型的机构，都在为商户提供网络（移动）支付解决方案。另一方案，用户的支付需求繁多，支付渠道已呈“碎片化”状态，并且“碎片化”程度将逐渐加深。聚合支付顾名思义就是将目前主流的支付进行整合，形成第三方支付的聚合通道，也被称为“第四方支付”。
-
-
-
+随着移动支付的盛行，商业银行、第三方支付公司、其它清算机构、消费金融公司等众多类型的机构，都在为商户提供网络（移动）支付解决方案。另一方案，用户的支付需求繁多，支付渠道已呈“碎片化”状态，并且“碎片化”程度将逐渐加深。聚合支付顾名思义就是将目前主流的支付进行整合，形成第三方支付的聚合通道，也被称为“第四方支付”。
 
 
 ## 2. 服务发现
@@ -236,13 +233,150 @@ public String service2() {
 ````
 
 ##### 2.4.2.3 service1微服务
-service1采用和service2相同的工程结构
+> service1采用和service2相同的工程结构 
+> 
+> service1对外暴露dubbo接口，并且实现service1调用service2 
+> 
+> 在service1-server中引入service1-api和service2-api依赖，通过dubbo的注解@Reference注入接口实现service1远程调用service2
+> 
+> service1-server的配置文件与service2-server类似，只需要把端口号更改即可
 
-service1对外暴露dubbo接口，并且实现service1调用service2
+##### 2.4.2.2 application1调用service1
+> 与application1调用service2类似
+
+#### 2.4.3 服务发现的数据模型
+##### 2.4.3.1 Namespace 隔离设计
+**命名空间（Namespace）** 用于进行租户粒度的隔离，Namespace的常用场景之一是不同环境的隔离，例如开发测试环境和生产环境的资源（如配置、服务）隔离等。
+
+- 从一个用户的角度来看，如果有多套不同的环境，那么这个时候可以根据指定的环境来创建不同的Namespace，以此来实现多环境的隔离。例如，你可能有开发，测试和生产三个不同的环境，那么使用一套nacos集群可以分别建以下三个不同的Namespace。如下图所示：
+- ![Namespace划分](./img/img_3.png)
 
 
+##### 2.4.3.2 数据模型
+Nacos在经过阿里内部多年生产经验后提炼出的数据模型，则是一种服务-集群-实例的三层模型，这样基本可以满足服务在所有场景下得数据存储和管理。
+![nacos数据模型](./img/img_4.png)
 
+nacos服务发现的数据模型如下：
 
+- **服务**：对外提供的软件功能，通过网络访问预定义的接口。
+- **实例**：提供一个或多个服务的具有可访问网络地址（IP:Port）的进程，启动一个服务，就产生了一个服务实例。
+- **元信息**：Nacos数据（如配置和服务）描述信息，如服务版本、权重、容灾策略、负载均衡策略、鉴权配置、各种自定义标签（label），从作用范围来看，分为服务级别的元信息、集群的元信息及实例的元信息。
+- **集群**：服务实例的集合，服务实例组成一个默认集群，集群可以被进一步按需求划分，划分的单位可以是虚拟集群，相同集群下的实例才能相互感知。
+
+通过数据模型可知：应用通过Namespace、Service、Cluster（DEFAULT）的配置，描述了该向哪个环境（如开发环境）的哪个集群注册实例。
+
+**配置集群** 
+指定集群名称：DEFAULT表示默认集群，可不填写
+````yml
+spring:
+  application:
+	name: transaction-service
+  cloud:
+	nacos:
+	  discovery:
+		server-addr: 10.130.6.115:8848  # 注册中心地址
+		namespace: a1f34l3-2333-54d3-3dd3-edd998c2af90a8  # 开发环境
+		cluster-name: DEFAULT # 默认集群，可不填写
+````
+> Note: 集群作为实例的隔离，相同集群的实例才能相互感知。
+> 
+> Note：Namespace、cluster-name若不填写都将采取默认值，Namespace的默认是public命名空间，cluster-name的默认值为DEFAULT集群。
+
+## 3. 配置管理
+### 3.1 理解配置中心
+#### 3.1.1 什么是配置
+应用程序在启动和运行的时候往往需要读取一些配置信息，配置基本上伴随着应用程序的整个生命周期，比如：数据库连接参数、启动参数等。
+
+配置主要有以下几个特点：
+
+- **配置是独立于程序的只读变量**
+  - 配置对于程序是只读的，程序通过读取配置来改变自己的行为，但是程序不应该去改变配置
+- **配置伴随应用的整个生命周期**
+  - 配置贯穿于应用的整个生命周期，应用在启动时通过读取配置来初始化，在运行时根据配置调整行为。比如：启动时需要读取服务的端口号、系统在运行过程中需要读取定时策略执行定时任务等。
+- **配置可以有多种加载方式**
+  - 常见的有程序内部hard code，配置文件，环境变量，启动参数，基于数据库等。
+- **配置需要治理** 
+  - 同一份程序在不同的环境（开发、测试、生产）、不同的集群（如不同的数据中心）经常需要有不同的配置，所以需要有完善的环境、集群配置管理。
+
+#### 3.1.2 什么是配置中心
+在微服务架构中，当服务从一个单体应用，被拆分成分布式系统上一个个服务节点后，配置文件也必须跟着迁移（分割），这样配置就分散了，不仅如此，分三种还包含着冗余，如下图：
+![配置分散](./img/img_5.png)
+
+下图显示了配置中心的功能，配置中心将配置从各应用中剥离出来，对配置进行统一管理，应用自身不需要自己去管理配置。
+![配置中心](./img/img_6.png)
+
+配置中心的服务流程如下：
+1. 用户在配置中心更新配置信息；
+2. 服务A和服务B及时得到配置更新通知，从配置中心获取配置。
+
+**总的来说，配置中心就是一种统一管理各种应用配置的基础服务组件。**
+
+在系统架构中，配置中心是整个微服务基础架构体系中的一个组件，如下图，它的功能看上去并不起眼，无非就是配置的管理和存取，但它是整个微服务架构中不可或缺的一环。
+![配置中心在微服务架构中](./img/img_7.png)
+
+### 3.2 Nacos配置管理
+#### 3.2.1 发布配置
+首先在nacos发布配置，nacos-restful-consumer服务从nacos读取配置。
+访问nacos控制台，点击菜单**配置管理 -> 配置列表**：在Nacos添加如下的配置
+````
+Namespace: public
+Data ID:  nacos-restful-consumer.yaml
+Group:  DEFAULT_GROUP
+配置格式: YAML
+配置内容: common:
+            name: application1 config
+````
+
+#### 3.2.2 获取配置
+在nacos-restful-consumer工程的controller中增加获取配置的web访问端点 /configs，通过标准的spring @Value 方式：
+
+````java
+@Value("${common.name}")
+private String common_name;
+
+@GetMapping(value = "/configs")
+public String getValue() {
+    return common_name;
+}
+````
+
+因为要从nacos配置中心获取配置，所以需要在consumer中引入nacos配置中心依赖
+````xml
+<dependency>
+    <groupId>com.alibaba.cloud</groupId>
+    <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+</dependency>
+````
+在配置文件中配置上配置中心的地址
+````yml
+spring:
+  cloud:
+    nacos:
+      config:
+        server-addr: 10.130.6.115:8848
+        # 指定配置文件的扩展名，配置文件名称根据application.name的名称加扩展名拼装，为nacos-restful-consumer.yaml
+        file-extension: yaml
+````
+**注意：** 使用配置中心，配置文件的名称一定要使用bootstrap.yml来命名，因为boostrap.yml的加载顺序优先于application.yml
+
+**动态获取配置文件中的配置项**
+````java
+/**
+ * 注入配置文件上下文
+ */
+@Resource
+ConfigurableApplicationContext applicationContext;
+
+@GetMapping("/configs")
+public String getConfig() {
+    // common.name 是nacos配置中心的nacos-restful-consumer.yaml里的配置项
+    return applicationContext.getEnvironment().getProperty("common.name");
+}
+````
+
+通过nacos控制台更新common.name的配置值，再次访问web端点/configs，发现应用程序能够获取到最新的配置值，说明nacos配置中心支持配置的动态更新。
+
+> Note：可以通过配置spring.cloud.nacos.config.refresh.enabled=false来关闭动态刷新
 
 
 
